Add Discord icon. Fix Camera icon.

--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
         </div>
         <div id="board">
         </div>
-        <p class="community">Join The <a href="https://discord.gg/tV49tWtgXS" target="_blank" title="CosyWithJodie discord">Community</a></p>
-        <button onclick="capture()"><i class="fad fa-camera fa-solid fa-sm"></i> Capture and Download Screenshot</button>
+        <p class="community">Join The <a href="https://discord.gg/tV49tWtgXS" target="_blank" title="CosyWithJodie discord"><i class="fab fa-discord"></i>Community</a></p>
+        <button onclick="capture()"><i class="fad fa-camera fas"></i> Capture and Download Screenshot</button>
       </div>
     </div>
     <footer class="footer">
