Add stream link

--- a/index.html
+++ b/index.html
@@ -101,7 +101,9 @@
       <div id="game">
         <div class="logo-refresh-container">
           <div class="title">
-            <img src="resources/images/logo.png" width="25%" alt="CosyWithJodie Bingo!">
+            <a href="https://www.twitch.tv/cosywithjodie" target="_blank" title="CosyWithJodie stream">
+              <img src="resources/images/logo.png" width="25%" alt="CosyWithJodie Bingo!">
+            </a>
           </div>
           <button id="refreshButton" class="refreshButton">
             <a class="sheet-link"><i class="fas fa-sync-alt refresh-icon"></i></a>
